--- a/src/Task2.html
+++ b/src/Task2.html
@@ -9,11 +9,12 @@
 </head>
 <body>
  <header class="bg-dark py-5 px-5">
-<div class="row ">
+<div class="row g-4">
 <div claas="d-flex">
 <img src="https://static.wixstatic.com/media/457549_bcdc321702c342a597b88dd3a6635211~mv2.png/v1/fill/w_135,h_66,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/STM_Initial%20Logo%20RED.png" alt="">
 </div>
-
+<h1 class=" text-light" style="font-family:serif;">ST. THOMAS MORE SCHOOL</h1>
+<p></p>
 </div>
  </header>
 
