--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>E commerce</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <style>
@@ -25,33 +25,33 @@
 </style>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container px-4">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+      <div class="container px-lg-4">
         <a class="navbar-brand fs-2 fw-bold" style="color: #ea4dca;" href="#">Meesho</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link text-light fw-4" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fw-4" href="#">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fw-4" href="#">Orders</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fw-4" href="#">Cart</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light fw-4" href="#">Contact</a>
-                </li>
-            </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link text-light fw-4" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light fw-4" href="#">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light fw-4" href="#">Orders</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light fw-4" href="#">Cart</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light fw-4" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
+      </div>
+    </nav>
 
   
 
@@ -404,10 +404,9 @@
                     </div>
                   </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-   <script src="js/bootstrap.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
      
 </body>
 </html>
