--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -25,35 +25,40 @@
 </style>
 
 <body>
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-      <div class="container mx-auto px-lg-4">
-        <a class="navbar-brand fs-2 fw-bold" style="color: #ea4dca;" href="#">Meesho</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link text-light fw-4" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-4" href="#">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-4" href="#">Orders</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-4" href="#">Cart</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-4" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
-  
+
+    <header>
+      <nav class="navbar navbar-expand-md navbar-light" style="background-color: #080909;">
+          <div class="container px-4">
+            <a class="navbar-brand fs-2 fw-bold" style="color: #ea4dca;" href="#">Meesho</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+      
+              <!-- Menu Items -->
+              <div class="collapse navbar-collapse justify-content-end" id="navbar">
+                  <ul class="navbar-nav">
+                      <li class="nav-item">
+                          <a href="#" class="nav-link text-white">Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="/courses.html" class="nav-link text-white">Profile</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="/resources.html" class="nav-link text-white">Orders</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="/blog.html" class="nav-link text-white">Cart</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="/contact.html" class="nav-link text-white">Contact</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+
+    </header>
 
 <!----hero-->
 <section class="container-fluid mx-auto  px-lg-5 px-2  py-3 py-lg-5" style="background-color:ghostwhite;">
@@ -78,7 +83,7 @@
           
 </div>
 
-            <button type="button" class="btn m-4  btn-lg text-light py-2 d-flex gap-2 fw-medium" style="background-color:darkmagenta;"><img src="../asset/playstoreSmallIcon.png" alt=""> Download the Meesho App</button>
+            <button type="button" class="btn m-4  btn-lg text-light py-2 d-flex gap-2 fw-medium shadow" style="background-color:darkmagenta;"><img src="../asset/playstoreSmallIcon.png" alt=""> Download the Meesho App</button>
       </div>
       <div class="col-lg-6 col-md-4 ">
           <img src="../asset/meesho.webp" class="img-fluid" alt="Shopify Image" style="width:200%;">
