--- a/src/school.html
+++ b/src/school.html
@@ -36,21 +36,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link fw-medium " href="http://127.0.0.1:5500/src/school.html">Home</a>
-    
+                            <a class="nav-link fw-medium " href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/school">Home</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link fw-medium  " href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/About%20us">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-medium  " href="">About Us</a>
+                            <a class="nav-link fw-medium  " href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/Admissions">Admissions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-medium  " href="http://127.0.0.1:5500/src/Acadamics.html">Admissions</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link fw-medium  " href="http://127.0.0.1:5500/src/Acadamics.html">Academics</a>
+                            <a class="nav-link fw-medium  " href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/acadamics">Academics</a>
                         </li>
                       
                         <li class="nav-item">
-                            <a class="nav-link fw-medium  " href="http://127.0.0.1:5500/src/contact.html">Contact</a>
+                            <a class="nav-link fw-medium  " href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/contact">Contact</a>
                         </li>
                     </ul>
                 </div>
