--- a/src/acadamics.html
+++ b/src/acadamics.html
@@ -32,16 +32,16 @@
                           <a href="#" class="nav-link  fw-semibold">Home</a>
                       </li>
                       <li class="nav-item">
-                          <a href="/courses.html" class="nav-link  fw-semibold">About us</a>
+                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/About%20ushttps://soujanyavoila.github.io/Xplore-tailwindcss/src/school" class="nav-link  fw-semibold">About us</a>
                       </li>
                       <li class="nav-item">
-                          <a href="/resources.html" class="nav-link  fw-semibold">Admissions</a>
+                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/Admissions" class="nav-link  fw-semibold">Admissions</a>
                       </li>
                       <li class="nav-item">
-                          <a href="/blog.html" class="nav-link  fw-semibold">Acadamics</a>
+                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/acadamics" class="nav-link  fw-semibold">Acadamics</a>
                       </li>
                       <li class="nav-item">
-                          <a href="/contact.html" class="nav-link  fw-semibold">Contact</a>
+                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/contact" class="nav-link  fw-semibold">Contact</a>
                       </li>
                   </ul>
               </div>
