--- a/src/acadamics.html
+++ b/src/acadamics.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Header Section -->
-       
+            
     <header>
       <nav class="navbar navbar-expand-md navbar-light"  style="background-color: #aedff7;" >
           <div class="container px-4">
@@ -29,24 +29,26 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbar">
                   <ul class="navbar-nav">
                       <li class="nav-item">
-                          <a href="#" class="nav-link  fw-semibold">Home</a>
+                          <a href="./school.html" class="nav-link  fw-semibold">Home</a>
                       </li>
                       <li class="nav-item">
-                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/About%20ushttps://soujanyavoila.github.io/Xplore-tailwindcss/src/school" class="nav-link  fw-semibold">About us</a>
+                          <a href="./About_us.html" class="nav-link  fw-semibold">About us</a>
                       </li>
                       <li class="nav-item">
-                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/Admissions" class="nav-link  fw-semibold">Admissions</a>
+                          <a href="./Admissions.html" class="nav-link  fw-semibold">Admissions</a>
                       </li>
                       <li class="nav-item">
-                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/acadamics" class="nav-link  fw-semibold">Acadamics</a>
+                          <a href="./acadamics.html" class="nav-link  fw-semibold">Acadamics</a>
                       </li>
                       <li class="nav-item">
-                          <a href="https://soujanyavoila.github.io/Xplore-tailwindcss/src/contact" class="nav-link  fw-semibold">Contact</a>
+                          <a href="./contact.html" class="nav-link  fw-semibold">Contact</a>
                       </li>
                   </ul>
               </div>
           </div>
       </nav>
+
+      </header>
 
     </header>
   
