--- a/src/Admissions.html
+++ b/src/Admissions.html
@@ -33,7 +33,7 @@
                             <a href="./About _us.html" class="nav-link  fw-semibold">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./Admissions.html" class="nav-link  fw-semibold">Admissions</a>
+                            <a href="./About us.html" class="nav-link  fw-semibold">Admissions</a>
                         </li>
                         <li class="nav-item">
                             <a href="./acadamics.html" class="nav-link  fw-semibold">Acadamics</a>
