--- a/src/acadamics.html
+++ b/src/acadamics.html
@@ -32,7 +32,7 @@
                           <a href="./school.html" class="nav-link  fw-semibold">Home</a>
                       </li>
                       <li class="nav-item">
-                          <a href="./About _us.html" class="nav-link  fw-semibold">About us</a>
+                          <a href="./About us.html" class="nav-link  fw-semibold">About us</a>
                       </li>
                       <li class="nav-item">
                           <a href="./Admissions.html" class="nav-link  fw-semibold">Admissions</a>
