--- a/src/school.html
+++ b/src/school.html
@@ -42,7 +42,7 @@
                             <a href="./school.html" class="nav-link  fw-semibold">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./About us.html" class="nav-link  fw-semibold">About us</a>
+                            <a href="./About_us.html" class="nav-link  fw-semibold">About us</a>
                         </li>
                         <li class="nav-item">
                             <a href="./Admissions.html" class="nav-link  fw-semibold">Admissions</a>
