--- a/src/index1.html
+++ b/src/index1.html
@@ -91,31 +91,30 @@
 
 </section>
 
-<section class="container-fluid mx-auto bg-gray-100  lg:py-10 lg:px-20 p-5  md:py-5 md:px-8  ">
-<h1 class="text-3xl font-bold text-orange-900 text-center font-serif">Our Services</h1>
-<p class="text-center text-base italic font-normal text-gray-500 my-2">We provide the best services</p>
-<div class= "container mx-auto max-w-screen-xl grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1 gap-5 py-8 lg:px-10 ">
-<div class="bg-white hover:border-2 hover:border-blue-300 cursor-pointer px-4 py-5 flex flex-col items-center  rounded-lg  scale-100  md:mr-  duration-300 ease-in-out transform hover:-translate-y-2">
-<div class="flex gap-1">
-  <img src="../asset/web-development4.png" class="h-12 w-16 ">
-  <div class="text-2xl font-semibold text-sky-900">Web Development</div>
- 
-</div>
-<p class="font-sans leading-relaxed mt-2">We offer comprehensive web development services to create user-friendly and responsive websites. Our expert developers use the latest technologies to build modern and functional web applications that cater to your specific needs.</p>
-</div>
-<!--2-->
-<div class="bg-white hover:border-2 hover:border-blue-300 cursor-pointer px-4 py-5 flex flex-col items-center  rounded-lg  scale-100  md:mr-5  duration-300 ease-in-out transform hover:-translate-y-2">
+<section class="container-fluid mx-auto bg-gray-50 py-10 px-8 md:py-5 md:px-5 lg:py-12 lg:px-20">
+    <h1 class="text-4xl font-semibold  text-center font-serif">Our Services</h1>
+    <p class="text-center text-lg italic font-normal text-gray-600 my-4">Experience the best services we offer</p>
+    <div class="container mx-auto max-w-screen-xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6 py-8 lg:px-10">
+      <!-- Service 1 -->
+      <div class="bg-white hover:shadow-lg cursor-pointer p-5 flex flex-col items-center rounded-lg transform duration-300 hover:-translate-y-2 hover:bg-blue-50 border border-blue-100 hover:border-2">
+        <div class="flex items-center gap-3">
+          <img src="../asset/web-development4.png" class="h-12 w-16" alt="Web Development">
+          <div class="text-2xl font-semibold text-sky-900">Web Development</div>
+        </div>
+        <p class="font-sans leading-relaxed mt-4 tracking-wide">Our expert developers use the latest technologies to build modern and functional web applications that cater to your specific needs. We offer comprehensive web development services to create user-friendly and responsive websites.</p>
+      </div>
   
-  <div class="flex gap-1">
-    <img src="../asset/mobile-app-development.png" alt="mobile img" class="h-12 w-16">
-    <div class="text-2xl font-semibold text-sky-900">Mobile Development</div>
+      <!-- Service 2 -->
+      <div class="bg-white hover:shadow-lg cursor-pointer p-5 flex flex-col items-center rounded-lg transform duration-300 hover:-translate-y-2 hover:bg-blue-50 border border-blue-100 hover:border-2">
+        <div class="flex items-center gap-3">
+          <img src="../asset/mobile-app-development.png" alt="Mobile Development" class="h-12 w-16">
+          <div class="text-2xl font-semibold text-sky-900">Mobile Development</div>
+        </div>
+        <p class="font-sans leading-relaxed mt-4">We focus on delivering seamless user experiences and cutting-edge features to ensure your mobile app stands out in the competitive market. Our mobile development services encompass the creation of innovative and engaging mobile apps for various platforms.</p>
+      </div>
     </div>
-    <p class="font-sans leading-relaxed mt-2">Our mobile development services encompass the creation of innovative and engaging mobile apps for various platforms. We focus on delivering seamless user experiences and cutting-edge features to ensure your app stands out in the competitive market.
-
-    </p>
-  </div>
-</div>
-
+  </section>
+  
 
 
 
@@ -126,20 +125,20 @@
   <p class="text-center text-base italic font-normal text-slate-500 my-3">Speed up your work flow with our Products</p>
  <div class="container mx-auto lg:px-10  max-w-screen-xl">
   <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 lg:pt-16 md:py-10  gap-6 py-4">
-  <div class="flex flex-col  items-center md:items-start bg-white hover:bg-teal-400 hover:text-white border border-teal-200 gap-2 px-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
+  <div class="flex flex-col  items-center md:items-start bg-white hover:bg-teal-400 hover:text-white border border-teal-200 gap-2 p-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
     <img src="../asset/community1.png" class="h-16 w-16 rounded-full bg-white self-center relative bottom-8 " >
-   <div class="bg-gradient-to-r w-40 from-teal-800 font-medium to-teal-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-200 ease-in-out transform  hover:translate-x-4 relative bottom-8 rounded-md  ">Community App</div> 
-   <p class="relative bottom-5">Connect and collaborate with your community using our innovative Community App. Share ideas, events, and more!</p>
+   <div class="bg-gradient-to-r w-40 from-teal-800 font-medium to-teal-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-200 ease-in-out transform  hover:translate-x-4 relative bottom-5 rounded-md  ">Community App</div> 
+   <p class="">Connect and collaborate with your community using our innovative Community App. Share ideas, events, and more!</p>
    <button type="button" class=" bg-gradient-to-r from-teal-600 via-teal-700 to-teal-500 w-36  font-medium rounded-full text-base text-white px-5 py-2 text-center mr-2 my-5 transform scale-100 hover:scale-105 transition-transform duration-150 flex border border-white ">view details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mt-1.5 font-semibold text-white">
     <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
   </svg>
    </button>
   </div>  
   <!---2-->
-  <div class="flex flex-col  items-center md:items-start bg-white hover:bg-yellow-400 hover:text-white border border-yellow-200 gap-2 px-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
+  <div class="flex flex-col  items-center md:items-start bg-white hover:bg-yellow-400 hover:text-white border border-yellow-200 gap-2 p-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
     <img src="../asset/recruitment.jpg" class="h-16 w-16 rounded-full bg-white self-center relative bottom-8 " >
-   <div class="bg-gradient-to-r w-40 from-yellow-600 font-medium to-yellow-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-500 ease-in-out transform  hover:translate-x-4 relative bottom-8 rounded-md  ">Recruitment App</div> 
-   <p class="relative bottom-5">Streamline your recruitment process with our advanced Recruitment App. Find the best candidates efficiently</p>
+   <div class="bg-gradient-to-r w-40 from-yellow-600 font-medium to-yellow-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-500 ease-in-out transform  hover:translate-x-4 relative bottom-5 rounded-md  ">Recruitment App</div> 
+   <p class="">Streamline your recruitment process with our advanced Recruitment App. Find the best candidates efficiently</p>
    <button type="button" class="text-white bg-yellow-600 w-36   font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 my-5 transform scale-100 hover:scale-105 transition-transform duration-150 flex border border-white">View Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 text-white mt-0.5">
     <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
   </svg>
@@ -147,10 +146,10 @@
   </div>  
 <!--3-->
 
-<div class="flex flex-col  items-center md:items-start bg-white hover:bg-green-300 hover:text-white border border-green-200 gap-2 px-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
+<div class="flex flex-col  items-center md:items-start bg-white hover:bg-green-300 hover:text-white border border-green-200 gap-2 p-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
   <img src="../asset/web app1.png" class="h-16 w-16 rounded-full bg-white self-center relative bottom-8 " >
- <div class="bg-gradient-to-r w-36 from-green-600 font-medium to-green-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-500 ease-in-out transform  hover:translate-x-4 relative bottom-8 rounded-md  ">Web App</div> 
- <p class="relative bottom-5">Build your online presence with our versatile Web App solutions. Create stunning websites tailored to your needs.
+ <div class="bg-gradient-to-r w-36 from-green-600 font-medium to-green-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-500 ease-in-out transform  hover:translate-x-4 relative bottom-5 rounded-md  ">Web App</div> 
+ <p class="">Build your online presence with our versatile Web App solutions. Create stunning websites tailored to your needs.
 
  </p>
  <button type="button" class="text-white bg-green-600 w-36  font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 my-5 transform scale-100 hover:scale-105 transition-transform duration-150 flex border border-white"> View Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 text-white mt-0.5">
@@ -159,10 +158,10 @@
 </div>  
 <!--4-->
 
-<div class="flex flex-col bg-white items-center md:items-start hover:bg-purple-400 hover:text-white border border-purple-200 gap-2 px-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
+<div class="flex flex-col bg-white items-center md:items-start hover:bg-purple-400 hover:text-white border border-purple-200 gap-2 p-4 shadow rounded-xl hover:shadow-2xl cursor-pointer duration-500 ease-in">
   <img src="../asset/book.png" class="h-16 w-16 rounded-full bg-white self-center relative bottom-8 " >
- <div class="bg-gradient-to-r w-36 from-purple-600 font-medium to-purple-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-500 ease-in-out transform  hover:translate-x-4 relative bottom-8 rounded-md  ">Learning App</div> 
- <p class="relative bottom-5">Build your online presence with our versatile Web App solutions. Create stunning websites tailored to your needs.
+ <div class="bg-gradient-to-r w-36 from-purple-600 font-medium to-purple-100  py-1 px-2 border border-white  text-white text-base font-sans   duration-500 ease-in-out transform  hover:translate-x-4 relative bottom-5 rounded-md  ">Learning App</div> 
+ <p class="">Build your online presence with our versatile Web App solutions. Create stunning websites tailored to your needs.
 
  </p>
  <button type="button" class="text-white bg-purple-600 w-36   font-medium rounded-full text-sm px-5 py-2.5 text-center mr-2 my-5 transform scale-100 hover:scale-105 transition-transform duration-150 flex border border-white"> View Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 text-white mt-0.5">
@@ -236,7 +235,7 @@
   <div class="container mx-auto max-w-screen-xl lg:px-10 py-3">
    <div class="grid md:grid-cols-2 grid-cols-1 items-center justify-center">
     <div class="">
-<h1 class="text-4xl md:text-3xl mb-3 w-96 font-serif font-medium text-sky-500 ">Looking for a Customized Solution?</h1>
+<h1 class="text-4xl md:text-3xl mb-3 w-96 font-sans font-semibold leading-relaxed ">Looking for a Customized Solution?</h1>
 <div class="flex flex-col">
   <p class="text-slate-500 font-sans">Our team is here to help you find the perfect solution tailored to your specific needs. Contact us to get started.</p>    
 <button type="button" class="text-white bg-gradient-to-r from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 shadow-lg shadow-teal-500/50 dark:shadow-lg dark:shadow-teal-800/80 font-medium rounded-full text-base px-5 py-2.5 text-center mr-2 mb-2 my-5 transform scale-100 hover:scale-105 transition-transform duration-150 self-center">Talk to Us</button>
