--- a/src/index1.html
+++ b/src/index1.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 
-  <nav class="bg-sky-800 border-gray-200 lg:px-24 dark:bg-gray-900 dark:border-gray-700">
+  <nav class="container-fluid mx-auto bg-sky-800 border-gray-200 lg:px-24 px-5 ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center">
           
           <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Voilacode</span>
       </a>
-      <button data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 bg-white text-blue-500 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-multi-level" aria-expanded="false">
+      <button data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 bg-white text-blue-500 focus:ring-gray-200 " aria-controls="navbar-multi-level" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
@@ -74,7 +74,7 @@
   
 <!----hero-->
 <section class="container-fluid mx-auto bg-sky-100 lg:py-16 lg:px-20 p-5 md:py-5 md:px-8 gap-6">
- <div class="container  mx-auto max-w-screen-xl  ">
+ <div class="container flex justify-center  mx-auto max-w-screen-xl  ">
 <div class="grid md:grid-cols-12 grid-cols-1 lg:px-8 gap-10 items-center">
   <div class="col-span-7">
     <h1 class="md:text-4xl lg:text-5xl text-3xl  font-bold w-full text-red-800 animate-pulse">We Help You Build and Grow Business</h1>   
@@ -235,7 +235,7 @@
   <div class="container mx-auto max-w-screen-xl lg:px-10 py-3">
    <div class="grid md:grid-cols-2 grid-cols-1 items-center justify-center">
     <div class="">
-<h1 class="text-4xl md:text-3xl mb-3 w-96 font-sans font-semibold leading-relaxed ">Looking for a Customized Solution?</h1>
+<h1 class="lg:text-4xl md:text-3xl text-2xl mb-3 w-96 font-sans font-semibold">Looking for a Customized Solution?</h1>
 <div class="flex flex-col">
   <p class="text-slate-500 font-sans">Our team is here to help you find the perfect solution tailored to your specific needs. Contact us to get started.</p>    
 <button type="button" class="text-white bg-gradient-to-r from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 shadow-lg shadow-teal-500/50 dark:shadow-lg dark:shadow-teal-800/80 font-medium rounded-full text-base px-5 py-2.5 text-center mr-2 mb-2 my-5 transform scale-100 hover:scale-105 transition-transform duration-150 self-center">Talk to Us</button>
